--- a/src/app/admin/pages-planes/add/add.component.html
+++ b/src/app/admin/pages-planes/add/add.component.html
@@ -74,7 +74,8 @@
 
                 <form nz-form [formGroup]="validateFormHistorial">
 
-                    <nz-divider nzText="Historial de incidencias"></nz-divider>
+                    <nz-divider style="color: #3e467d; font-size: 20px; font-weight: bold;"
+                        nzText="Historial de incidencias"></nz-divider>
 
                     <nz-form-item>
                         <nz-form-label [nzSpan]="7" nzRequired>Usuario soporte</nz-form-label>
