--- a/src/app/barra/barra.component.html
+++ b/src/app/barra/barra.component.html
@@ -20,7 +20,7 @@
 
         <button nz-button (click)="add()" nzType="primary" style="width: 150px; margin-right: 20px;">
             <i nz-icon nzType="plus"></i>
-            Agregar nuevo
+            Agregar
         </button>
     </div>
 
