--- a/src/app/admin/pages-planes/edit/edit.component.html
+++ b/src/app/admin/pages-planes/edit/edit.component.html
@@ -80,8 +80,17 @@
 
                 </form>
 
+                <div *ngIf="!ticket.historial_incidencia" style="text-align: center;">
+                    <button *ngIf="!showFormHistorial" nz-button nzType="primary" (click)="showModalHistorial()">Agregar
+                        historial</button>
 
-                <form nz-form [formGroup]="validateForm">
+                    <button *ngIf="showFormHistorial" nz-button nzType="primary" nzDanger nz-popconfirm
+                        nzPopconfirmTitle="¿Esta seguro de ocultar el historial? Los campos ingresados se perderán."
+                        (nzOnConfirm)="ocultarlHistorial()">Ocultar historial</button>
+                </div>
+
+
+                <form *ngIf="ticket.historial_incidencia || showFormHistorial" nz-form [formGroup]="validateForm">
 
 
                     <nz-divider style="color: #3e467d; font-size: 20px; font-weight: bold;"
@@ -105,6 +114,16 @@
                         <nz-form-control [nzSpan]="12" nzErrorTip="Por favor escriba un comentario!">
                             <nz-input-group>
                                 <input type="text" formControlName="comentario" nz-input placeholder="Comentario" />
+                            </nz-input-group>
+
+                        </nz-form-control>
+                    </nz-form-item>
+
+                    <nz-form-item>
+                        <nz-form-label [nzSpan]="7">Fecha atención</nz-form-label>
+                        <nz-form-control [nzSpan]="12">
+                            <nz-input-group>
+                                <input type="text" formControlName="fecha_atencion" nz-input />
                             </nz-input-group>
 
                         </nz-form-control>
